2006-04-25  Werner Koch  <wk@g10code.com>

	* xmalloc.h: New.  Moved prototypes from util.h 
	* w32-gettext.h:  Include it.
	* common.c (utf8_to_wincp): Removed and replaced all callers by
	utf8_to_native.
	* common.c (wchar_to_utf8, utf8_to_wchar): Moved to ..
	* w32-gettext.c: .. here.
	(utf8_to_native): Make sure that we always return
	a string and never NULL.
	(native_to_utf8): New.
	(native_to_wchar): New.
	* gpgmsg.cpp (decrypt): Use native_to_utf8 for i18n strings
	expected to be utf-8.
	* pgpmime.c (pgpmime_decrypt, pgpmime_verify): Ditto.

2006-04-24  Werner Koch  <wk@g10code.com>

	* gpgmsg.cpp (decrypt): New arg INFO_ONLY.
	* olflange.cpp (OnReadComplete): Add code to call decrypt but with
	INFO_ONLY if preview decryption has not been requested.
	* main.c (read_options): New compatibility option no_preview_info.

	* gpgmsg.cpp (getRecipients): Don't add the default key here.
	(encrypt_and_sign): But do it here.
	* engine-gpgme.c (op_get_one_key): New.

2006-04-22  Timo Schulz  <ts@g10code.com>

	* common.c (utf8_to_wincp): Corrected utf8 decoding.
	* passphrase-dialog.c (load_recipbox): Likewise.
	* olflange-dlg.cpp (GPGOptionsDlgProc): Activate the
	'confirm' button when the dialog state has been changed.
	* olflange-rsrcs.rc (IDD_GPG_OPTIONS_DE): Change description.
	
2006-03-28  Werner Koch  <wk@g10code.com>

	* olflange-rsrcs.rc (IDD_GPG_OPTIONS_DE): Add new control box.
	(IDD_GPG_OPTIONS): Updated to match German version.
	* olflange-dlgs.cpp (GPGOptionsDlgProc): Ditto.
	* gpgmsg.cpp (decrypt): Implemented PREFER_HTML option.
	(get_long_attach_data): New.

2006-03-27  Werner Koch  <wk@g10code.com>

	* engine-gpgme.c (op_verify_detached_sig_gpgme): New.

	* pgpmime.c (pgpmime_verify): New. First take on a PGP/MIME
	signature verification.

	* gpgmsg.cpp (is_pgpmime): Renamed to is_pgpmime_enc.
	(class GpgMsgImpl): Niew members media_type. media_subtype and
	ct_protocol.
	(get_msg_content_type): New.